--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,11 +13,8 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Node
         uses: actions/setup-node@v4
-      - uses: actions/cache@v3 # 👀
-        id: npm-cache # 👀
-        with: # 👀
-          path: ~/.npm # 👀
-          key: npm-${{ hashFiles('**/package-lock.json') }} # 👀
+        with:
+          cache: npm
       - run: npm ci
       - run: npm run build
   test:
@@ -26,10 +23,20 @@ jobs:
       - uses: actions/checkout@v5
       - name: Setup Node
         uses: actions/setup-node@v4
-      - uses: actions/cache@v3 # 👀
-        id: npm-cache # 👀
-        with: # 👀
-          path: ~/.npm # 👀
-          key: npm-${{ hashFiles('**/package-lock.json') }} # 👀
+        with:
+          cache: "npm"
       - run: npm ci
       - run: npm test
+  coverage:
+    - uses: actions/checkout@v5
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        cache: "npm"
+    - run: npm ci
+    - run: npm run test -- --coverage
+    - uses: actions/upload-artifact@v3
+      name: Archive coverage report
+      with:
+        path: coverage
+        name: coverage-report
